tooling/nargo_cli/tests/snapshots/compile_failure/dep_submodule_overlap/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: MyStruct is private and not visible from the current module
  ┌─ src/main.nr:4:17
  │
4 │ use crate::lib::MyStruct;
  │                 -------- MyStruct is private
  │

warning: struct `MyStruct` is never constructed
  ┌─ src/lib.nr:1:8
  │
1 │ struct MyStruct {
  │        -------- struct is never constructed
  │

error: Duplicate definitions of import with name lib found
  ┌─ src/main.nr:1:33
  │
1 │ use reexporting_lib::{MyStruct, lib};
  │                                 --- Second import found here
2 │ 
3 │ mod lib;
  │     --- First import found here
  │

error: Duplicate definitions of import with name MyStruct found
  ┌─ src/main.nr:1:23
  │
1 │ use reexporting_lib::{MyStruct, lib};
  │                       -------- First import found here
  ·
4 │ use crate::lib::MyStruct;
  │                 -------- Second import found here
  │

error: Could not resolve 'is_struct_zero' in path
  ┌─ src/main.nr:8:17
  │
8 │     assert(lib::is_struct_zero(x));
  │                 --------------
  │

Aborting due to 3 previous errors
