tooling/nargo_cli/tests/snapshots/compile_failure/dep_submodule_overlap/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: struct `MyStruct` is never constructed
  ┌─ src/lib.nr:1:19
  │
1 │ pub(crate) struct MyStruct {
  │                   -------- struct is never constructed
  │

error: Duplicate definitions of import with name MyStruct found
  ┌─ src/main.nr:1:23
  │
1 │ use reexporting_lib::{MyStruct, lib};
  │                       -------- First definition found here
  ·
4 │ use crate::lib::MyStruct;
  │                 -------- Second definition found here
  │

error: Duplicate definitions of import with name lib found
  ┌─ src/main.nr:1:33
  │
1 │ use reexporting_lib::{MyStruct, lib};
  │                                 --- Second definition found here
2 │ 
3 │ mod lib;
  │     --- First definition found here
  │

error: Could not resolve 'is_struct_zero' in path
  ┌─ src/main.nr:8:17
  │
8 │     assert(lib::is_struct_zero(x));
  │                 --------------
  │

Aborting due to 3 previous errors
